syntax = "proto2";

option java_package = "com.spotify.ratatool.proto";
option optimize_for = SPEED;

message TestRecord {
    required OptionalNestedRecord optional_fields = 1;
    required RequiredNestedRecord required_fields = 2;
    required RepeatedNestedRecord repeated_fields = 3;
    optional OptionalNestedRecord optional_nested_field = 4;
    repeated OptionalNestedRecord repeated_nested_field = 5;
}

message OptionalNestedRecord {
    optional double double_field = 1;
    optional float float_field = 2;
    optional int32 int32_field = 3;
    optional int64 int64_field = 4;
    optional uint32 uint32_field = 5;
    optional uint64 uint64_field = 6;
    optional sint32 sint32_field = 7;
    optional sint64 sint64_field = 8;
    optional fixed32 fixed32_field = 9;
    optional fixed64 fixed64_field = 10;
    optional sfixed32 sfixed32_field = 11;
    optional sfixed64 sfixed64_field = 12;
    optional bool bool_field = 13;
    optional string string_field = 14;
    optional bytes bytes_field = 15;
    optional string upper_string_field = 16;
}

message RequiredNestedRecord {
    required double double_field = 1;
    required float float_field = 2;
    required int32 int32_field = 3;
    required int64 int64_field = 4;
    required uint32 uint32_field = 5;
    required uint64 uint64_field = 6;
    required sint32 sint32_field = 7;
    required sint64 sint64_field = 8;
    required fixed32 fixed32_field = 9;
    required fixed64 fixed64_field = 10;
    required sfixed32 sfixed32_field = 11;
    required sfixed64 sfixed64_field = 12;
    required bool bool_field = 13;
    required string string_field = 14;
    required bytes bytes_field = 15;
}

message RepeatedNestedRecord {
    repeated double double_field = 1;
    repeated float float_field = 2;
    repeated int32 int32_field = 3;
    repeated int64 int64_field = 4;
    repeated uint32 uint32_field = 5;
    repeated uint64 uint64_field = 6;
    repeated sint32 sint32_field = 7;
    repeated sint64 sint64_field = 8;
    repeated fixed32 fixed32_field = 9;
    repeated fixed64 fixed64_field = 10;
    repeated sfixed32 sfixed32_field = 11;
    repeated sfixed64 sfixed64_field = 12;
    repeated bool bool_field = 13;
    repeated string string_field = 14;
    repeated bytes bytes_field = 15;
}

message DeeplyRepeatedRecord {
    repeated RepeatedRecord repeated_record = 1;
}

message RepeatedRecord {
    repeated int32 nested_repeated_field = 1;
    required string string_field = 2;
}
